--- a/package.json
+++ b/package.json
@@ -1,44 +1,33 @@
 {
-  "name": "fck-react-dialog",
-  "version": "1.0.4",
+  "name": "fck-brasil-location-selector",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "copy:files": "copyfiles -u 1 src/**/*.css src/**/*.svg lib/",
-    "build": "rimraf lib/* && npm run copy:files && tsc -p .",
-    "build:watch": "npm run build -- --watch",
-    "dev": "webpack-dev-server --config ./examples/webpack.config.js"
+    "example:1": "ts-node-dev -r tsconfig-paths/register ./examples/test01.ts ",
+    "test": "jest --passWithNoTests --runInBand --no-cache --watch --silent",
+    "build": "rimraf lib/* && tsc -p tsconfig-build.json",
+    "build:watch": "npm run build -- --watch"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-input-mask": "^3.0.1",
-    "clean-webpack-plugin": "^1.0.0",
     "copyfiles": "^2.4.1",
-    "css-loader": "^6.5.1",
-    "html-webpack-plugin": "^5.5.0",
-    "react-icons": "^4.3.1",
+    "jest": "^27.4.5",
     "rimraf": "^3.0.2",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.3",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
-    "@types/uuid": "^8.3.4"
+    "ts-jest": "^27.1.2",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.4"
   },
   "peerDependencies": {
-    "react": ">=17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "typescript": ">=4.5.3",
-    "uuid": "^8.3.2"
+    "typescript": ">=4.5.3"
   },
   "files": [
     "/lib"
   ],
-  "dependencies": { }
+  "dependencies": {
+    "axios": "^0.26.0"
+  }
 }
