--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,26 @@
 {
-  "compilerOptions": {
-
-    "target": "es5",
-    "jsx": "react-jsx",     
+  "compilerOptions": {                                                           
+    "outDir": "lib",
     "module": "commonjs",
-    "lib": ["dom", "dom.iterable", "esnext"],  
-    "moduleResolution": "node",
+    "target": "es2019", 
+    "declarationDir": "./lib/types",
     "declaration": true,                             
     "declarationMap": true,                          
-    "sourceMap": true,                               
-    "outDir": "lib",                                 
+    "sourceMap": true,  
+    "allowJs": true,                                                         
     "esModuleInterop": true,                          
     "strict": true,                                  
-    "skipLibCheck": true,                            
-    "rootDirs": ["src", "tests"],
+    "skipLibCheck": true,   
+    "rootDirs": ["src", "tests", "examples"]  ,
     "baseUrl": ".",
-    "allowJs": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
+    "paths": {
+      "@/*": [ "./src/*" ],
+      "@tests/*": [  "./tests/*"  ],
+      "@lib/*": [  "./lib/*"  ],
+    },
+    "diagnostics": true,
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "lib", "examples"]
+  "include": ["src" , "tests", "examples"],
+  "exclude": ["node_modules", "lib"]
 }
+
