--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,34 @@
 {
-  "compilerOptions": {                                                           
-    "outDir": "lib",
-    "module": "commonjs",
-    "target": "es2019", 
+  "compilerOptions": {
+    "outDir": "lib",   
     "declarationDir": "./lib/types",
+    "target": "es5",
+    "jsx": "react-jsx",     
+    "module": "commonjs",
+    "lib": ["dom", "dom.iterable", "esnext"],  
+    "moduleResolution": "node",
     "declaration": true,                             
     "declarationMap": true,                          
-    "sourceMap": true,  
-    "allowJs": true,                                                         
+    "sourceMap": true,                                                        
     "esModuleInterop": true,                          
     "strict": true,                                  
-    "skipLibCheck": true,   
-    "rootDirs": ["src", "tests", "examples"]  ,
+    "skipLibCheck": true,                            
+    "rootDirs": ["src"],
     "baseUrl": ".",
+    "allowJs": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": [ "./src/*" ],
       "@tests/*": [  "./tests/*"  ],
-      "@lib/*": [  "./lib/*"  ],
+      "@lib/*": [  "./lib/*"  ]
     },
     "diagnostics": true,
   },
-  "include": ["src" , "tests", "examples"],
+  "typeRoots": [
+      "./@types",
+      "./node_modules/@types"
+  ],
+  "include": ["src", "examples"],
   "exclude": ["node_modules", "lib"]
 }
-
