--- a/examples/react-examples/package.json
+++ b/examples/react-examples/package.json
@@ -6,6 +6,7 @@
     "dev": "webpack-dev-server --config ./webpack.config.js"
   },
   "devDependencies": {
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
@@ -13,8 +14,7 @@
     "ts-loader": "^9.2.6",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
-    "babel-loader": "^8.2.3"
+    "webpack-dev-server": "^4.6.0"
   },
   "peerDependencies": {
     "react": ">=17.0.2",
@@ -23,6 +23,6 @@
     "typescript": ">=4.5.3"
   },
   "dependencies": {
-   
+    "fck-brasil-location-selector": "^1.0.0"
   }
 }
