--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "copy-react-files": "copyfiles -u 1 src/**/*.css src/**/*.svg lib/",
     "build": "rimraf lib/* && npm run copy-react-files && tsc -p tsconfig-build.json",
+    "build:watch": "npm run build -- --watch",
     "example:core": "ts-node-dev -r tsconfig-paths/register ./examples/core.ts ",
-    "example:react": "npm run build && webpack-dev-server --config ./examples/react-examples/webpack.config.js"
+    "example:react": "npm run build & npm run dev --prefix ./examples/react-examples"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
@@ -24,15 +25,18 @@
     "@types/react-dom": "^17.0.11",
     "react": ">=17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "axios": "^0.26.0"
   },
   "peerDependencies": {
-    "typescript": ">=4.5.3"
+    "react": ">=17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "typescript": ">=4.5.3",
+    "axios": "^0.26.0"
   },
   "files": [
     "/lib"
   ],
-  "dependencies": {
-    "axios": "^0.26.0"
-  }
+  "dependencies": { }
 }
