--- a/examples/react-example/package.json
+++ b/examples/react-example/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": false,
   "scripts": {
+    "pre-dev": "rimraf ./node_modules/fck-br-location-selector && npm install",
     "dev": "webpack-dev-server --config ./webpack.config.js"
   },
   "devDependencies": {
@@ -17,13 +18,9 @@
     "webpack-dev-server": "^4.6.0"
   },
   "peerDependencies": {
-    "react": ">=17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
     "typescript": ">=4.5.3"
   },
   "dependencies": {
     "fck-br-location-selector": "link ./../../../../../../Desktop/dev/fck-brasil-location-selector/lib"
   }
-
 }
