--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fck-brasil-location-selector",
+  "name": "fck-br-location-selector",
   "version": "1.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,11 +9,15 @@
     "copy-react-files": "copyfiles -u 1 src/**/*.css src/**/*.svg lib/",
     "build": "rimraf lib/* && npm run copy-react-files && tsc -p tsconfig-build.json",
     "build:watch": "npm run build -- --watch",
-    "example:core": "ts-node-dev -r tsconfig-paths/register ./examples/core.ts ",
-    "example:react": "npm run build & npm run dev --prefix ./examples/react-examples"
+    "example:core": "npm run build && ts-node-dev -r tsconfig-paths/register ./examples/core.ts ",
+    "example:react": "npm run dev --prefix ./examples/react-example",
+    "pack-link": "npm run build && npm pack && npm run pre-dev --prefix ./examples/react-example "
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.0",
     "copyfiles": "^2.4.1",
     "jest": "^27.4.5",
     "rimraf": "^3.0.2",
@@ -21,22 +25,16 @@
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
     "react": ">=17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "axios": "^0.26.0"
+    "react-dom": "^17.0.2"
   },
   "peerDependencies": {
+    "axios": "^0.26.0",
     "react": ">=17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "typescript": ">=4.5.3",
-    "axios": "^0.26.0"
+    "typescript": ">=4.5.3"
   },
   "files": [
     "/lib"
-  ],
-  "dependencies": { }
+  ]
 }
