--- a/examples/react-example/package.json
+++ b/examples/react-example/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "private": false,
   "scripts": {
-    "pre-dev": "rimraf ./node_modules/fck-br-location-selector && npm install",
-    "build": "rimraf dist/* && webpack --config ./webpack.config.js",
+    "build": "rimraf dist/* && webpack --config ./webpack.config.prod.js",
     "dev": "webpack-dev-server --config ./webpack.config.js"
   },
   "devDependencies": {
@@ -18,7 +17,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "webpack-dev-server": "^4.6.0",
+    "webpack-merge": "^5.8.0"
   },
   "peerDependencies": {
     "typescript": ">=4.5.3"
