--- a/examples/package.json
+++ b/examples/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fck-brasil-location-selector-react-example",
+  "name": "fck-table-forms-react-example",
   "version": "1.0.0",
   "private": false,
   "scripts": {
@@ -24,6 +24,6 @@
     "typescript": ">=4.5.3"
   },
   "dependencies": {
-    "fck-br-location-selector": "link ./../../../../../../Desktop/dev/fck-brasil-location-selector/lib"
+    "fck-table-forms": "link ./../../../../../../Desktop/dev/fck-brasil-location-selector/lib"
   }
 }
