--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "fck-br-location-selector",
-  "version": "1.0.4",
+  "name": "fck-table-forms",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "license": "MIT",
   "private": false,
-  "homepage":"https://fonsecabarreto.github.io/fck-brasil-location-selector/",
   "scripts": {
     "predeploy":"npm run build --prefix ./examples/react-example",
     "deploy":"gh-pages -d examples/react-example/dist",
@@ -32,7 +31,6 @@
     "typescript": "^4.5.4"
   },
   "peerDependencies": {
-    "axios": "^0.26.0",
     "react": ">=17.0.2",
     "react-dom": "^17.0.2",
     "typescript": ">=4.5.3"
