--- a/examples/package.json
+++ b/examples/package.json
@@ -24,6 +24,6 @@
     "typescript": ">=4.5.3"
   },
   "dependencies": {
-    "fck-table-forms": "link ./../../../../../../Desktop/dev/fck-brasil-location-selector/lib"
+    "fck-table-forms": "link ./../../../../../Desktop/dev/fck-table-forms/lib"
   }
 }
