--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "copy-react-files": "copyfiles -u 1 src/styles/*.css src/**/*.svg lib/",
     "build": "rimraf lib/* && npm run copy-react-files && tsc -p tsconfig-build.json",
     "build:watch": "npm run build -- --watch",
-    "example:core": "npm run build && ts-node-dev -r tsconfig-paths/register ./examples/core.ts ",
-    "example:react": "npm run dev --prefix ./examples/react-example",
+    "example": "npm run dev --prefix ./examples",
     "pack-link": "npm run build && npm pack && npm run pre-dev --prefix ./examples/react-example"
   },
   "devDependencies": {
@@ -33,7 +32,8 @@
   "peerDependencies": {
     "react": ">=17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": ">=4.5.3"
+    "typescript": ">=4.5.3",
+    "react-icons": "^4.3.1"
   },
   "files": [
     "/lib"
